--- a/html/index.html
+++ b/html/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso completo de css</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
     <!-- logo e navegação -->
         <section>
             <div>
-                <img src="img/css3.png"
+                <img class="logo" src="img/css3.png"
                     title="logotipo css">
             </div>
             <nav>
-                <ul>
-                    <a href="Tags.html"><li>Tags</li></a>
-                    <a href="#"><li>Manipulação com Imagens</li></a>
-                    <a href="#"><li>3</li></a>
+                <ul class="nav-menu">
+                    <li class="nav-item"><a class="nav-link" href="#">Home</li></a>
+                    <li class="nav-item"><a class="nav-link" href="#">Sobre</li></a>
+                    <li class="nav-item"><a class="nav-link" href="#">Contato</li></a>
                 </ul>
             </nav>
         </section>
@@ -26,9 +27,9 @@
     <!-- titulo principal -->
         <section>
             <h1>Curso completo de CSS</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem magnam sint placeat fuga quam ratione voluptatem nemo nostrum esse neque alias quibusdam, architecto, dolorum quia non pariatur, itaque iure! Ducimus.</p>
+            <p class="subtitulo"><strong>ipsum dolor sit amet consectetur adipisicing.</strong></p>
             <div>
-                <img src="img/gumballl.png"
+                <img class="gumball" src="img/gumballl.png"
                 title="gumball facinado">
             </div>
         </section>
